# tinytorch_v2

./: .gitignore  CMakeLists.txt  NOTES.md  README.md  clean.sh  main.py  setup.py
csrc/python/: bindings.hpp  module.cpp  tensor_core_bindings.cpp
csrc/tensor_core/: dtype.hpp  storage.hpp  tensor.cpp  tensor.hpp
tinytorch/: __init__.py  tensor.py
